--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "perfectea-license-api",
+    "name": "ea-license-api",
     "version": "1.0.0",
     "main": "index.js",
     "type": "module",
