--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "index.js",
     "type": "module",
     "dependencies": {
-        "@supabase/supabase-js": "^2.75.0"
+        "@supabase/supabase-js": "^2.75.0",
+        "cookie": "^0.6.0"
     }
 }
