--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,20 @@
     { "source": "/", "destination": "/admin/index.html" },
     { "source": "/admin", "destination": "/admin/index.html" },
     { "source": "/admin/login", "destination": "/admin/login.html" },
-    { "source": "/admin/dashboard", "destination": "/admin/dashboard.html" }
+    { "source": "/admin/dashboard", "destination": "/admin/dashboard.html" },
+    { "source": "/client/login", "destination": "/client/login.html" },
+    { "source": "/client/signup", "destination": "/client/signup.html" },
+    { "source": "/client/dashboard", "destination": "/client/dashboard.html" }
+  ],
+  "headers": [
+    {
+      "source": "/assets/images/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
   ]
 }
